src/objects/C1__c.object
<CustomObject>
    <fields>
        <fullName>Appartment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P1</label>
        <referenceTo>P1__c</referenceTo>
        <relationshipLabel>C1</relationshipLabel>
        <relationshipName>C1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C1Area__c</fullName>
        <label>C1Area</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C1Name__c</fullName>
        <label>C1Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_no__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P1-AN2</label>
        <referenceTo>P1__c</referenceTo>
        <relationshipLabel>C1 (P1-AN2)</relationshipLabel>
        <relationshipName>C11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TestArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P1</label>
        <referenceTo>P1__c</referenceTo>
        <relationshipLabel>C1 (P1)</relationshipLabel>
        <relationshipName>C12</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>C1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>C1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>